--- a/my-style.css
+++ b/my-style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-color: lightblue;
+    background-color: rgb(72, 165, 196);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
